[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Anthony Villena <anthony.villena@mckesson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
